--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "Dataverse": "AuthType=OAuth;Url=https://yourorg.crm.dynamics.com;Username=yourusername@yourorg.onmicrosoft.com;Password=yourpassword;AppId=51f81489-12ee-4a9e-aaae-a2591f45987d;RedirectUri=http://localhost;LoginPrompt=Auto"
+    "Dataverse": "AuthType=OAuth;Url=https://crm25ms.crm12.dynamics.com;
+    // Username=khali@khali318.onmicrosoft.com;
+    // Password=Oumer181;
+    // AppId=9786b5a6-c617-f011-9989-6045bd173b06;
+    // RedirectUri=http://localhost;LoginPrompt=Auto"
   }
 }
 
