--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Dataverse": "AuthType=OAuth;Url=https://crm25ms.crm12.dynamics.com;Username=khali@khali318.onmicrosoft.com;Password=Oumer181;AppId=b90da2ef-d6ce-4ebe-8b31-ec974cde2737;RedirectUri=http://localhost;LoginPrompt=Auto"
+    "Dataverse": "AuthType=OAuth;Url=https://crm25ms.crm12.dynamics.com;Username=khali@khali318.onmicrosoft.com;Password=Oumer181;RedirectUri=http://localhost;LoginPrompt=Auto"
   }
 }
 
