--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "Dataverse": "AuthType=OAuth;Url=https://crm25ms.crm12.dynamics.com;Username=khali@khali318.onmicrosoft.com;Password=Oumer181;RedirectUri=http://localhost;LoginPrompt=Auto"
+    "Dataverse": "AuthType=OAuth;Url=https://crm25ms.crm12.dynamics.com;
+    //Username=khali@khali318.onmicrosoft.com;
+    // Password=Oumer181;
+    // RedirectUri=http://localhost;LoginPrompt=Auto"
   }
 }
 
